# autopwn

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml  requirements.txt  scope.example.yaml
autopwn/: __init__.py  __main__.py  analysis.py  applicability.py  attack.py  authorization.py  bloodhound.py  chains.py  cli.py  config.py  escalate.py  facts.py  jobs.py  kb.py  parsers.py  playbooks.py  report.py  retrieval.py  sequence.py  signatures.py  store.py  verify.py
autopwn/agent/: __init__.py  agent.py  prompts.py  toolparse.py
autopwn/data/: attack_catalog.json
autopwn/knowledge/: active_directory.md  credentials.md  enterprise_services.md  methodology.md  web.md
autopwn/llm/: __init__.py  base.py  calllog.py  factory.py  openai_compatible.py
autopwn/tools/: __init__.py  ad_chain.py  ad_steps.py  base.py  catalog.py  command.py  custom.py  http_probe.py  loot.py  macro.py  mgmt.py  netdev.py  nmap_tool.py  port_scan.py  privesc.py  registry.py  relay.py  runner.py
autopwn/web/: __init__.py  _listener_proc.py  _shell_proc.py  listeners.py  playbooks.py  server.py  sessions.py  shells.py
autopwn/web/static/: app.css  app.js  index.html
examples/: goad-verify.json
scripts/: gen_screens.py
